<resources>
    <string name="app_name">Simple Chatbot</string>

    <string name="create_account">Create Account</string>
    <string name="remove_user">Remove user</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="drawer_open">Drawer Opens</string>
    <string name="drawer_close">Drawer Closes</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="register_request">Do not have an account? <u>Sign Up</u></string>
    <string name="login_request">Already have an account? <u>Sign In</u></string>
    <string name="btn_back"><![CDATA[<< Back]]></string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>


    <string name="email">Email</string>
    <string name="change_email">Change Email</string>


    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="confirm_password"><u>Confirm Your Password ?</u></string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>

    <string name="your_bookings">Your bookings</string>
    <string name="personal_info">Personal Info</string>
    <string name="account_info">Account Info</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About us</string>

    <string name="search_hint">Search any rentals</string>

    <string name="greeting">Greeting</string>
    <string name="greeting_afternoon">Good afternoon</string>

    <string name="near_your_school">Near your school</string>

    <string name="description">Description</string>
    <string name="about_this_rental">About this rental</string>
    <string name="amenities">Amenities</string>
    <string name="see_on_map">See On Map</string>
    <string name="policy_and_rules">Policy and Rules</string>

    <string name="your_reserved_listing">Your reserved listings</string>
    <string name="your_listing">Your listings</string>
    <string name="your_fav_listing">Your favourite listings</string>
    <string name="no_reserved_listings">You have no reserved listings</string>
    <string name="no_fav_listings">You have no favourite listings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="your_messages">Your messages</string>
</resources>
