<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="37dp"
        android:layout_marginTop="199dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="508dp"

        android:width="68dp"
        android:height="29dp"
        android:fontFamily="@font/roboto_bold"

        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="340dp"
        android:layout_height="50dp"

        android:layout_marginLeft="38dp"
        android:layout_marginTop="256dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="430dp"

        android:background="@drawable/background_txt"

        android:fontFamily="@font/roboto_light"
        android:textSize="16sp"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="340dp"
        android:layout_height="50dp"

        android:layout_marginLeft="38dp"
        android:layout_marginTop="322dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="364dp"

        android:background="@drawable/background_txt"

        android:fontFamily="@font/roboto_light"
        android:textSize="16sp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="38dp"
        android:layout_marginTop="393dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="292dp"

        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_bold"



        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="37dp"
        android:layout_marginTop="471dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="20dp"

        android:fontFamily="@font/roboto"
        android:textSize="16sp"

        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/txtSignUpRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="103dp"
        android:layout_marginTop="514dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"

        android:clickable="true"
        android:focusable="true"

        android:fontFamily="@font/roboto"
        android:textSize="16sp"

        android:text="@string/register_request"/>

</RelativeLayout>