<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.georgebrown.comp3074.stay.SetupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="340dp"
                android:layout_height="50dp"

                android:layout_marginLeft="37dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="37dp"

                android:background="@drawable/background_txt"

                android:fontFamily="@font/roboto_light"
                android:textSize="16sp"
                android:importantForAutofill="no"
                tools:targetApi="o"
                android:hint="@string/first_name"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart" />

            <!--Last Name-->
            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="340dp"
                android:layout_height="50dp"

                android:layout_marginStart="38dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="36dp"

                android:background="@drawable/background_txt"
                android:importantForAutofill="no"
                tools:targetApi="o"

                android:fontFamily="@font/roboto_light"
                android:textSize="16sp"

                android:hint="@string/last_name"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnSaveInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="37dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="167dp"

                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_bold"


                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
