<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:fillViewport="true">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="151dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginEnd="149dp"

                    android:background="@drawable/profile_pic"
                    android:clickable="true"
                    android:focusable="true"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

                <TextView
                    android:id="@+id/txtProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="100dp"

                    android:fontFamily="@font/roboto_bold"
                    android:textColor="#009688"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileImage" />


                <TextView
                    android:id="@+id/txtProfileBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="100dp"
                    android:fontFamily="@font/roboto"

                    android:textColor="#95989A"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfileName" />

                <TextView
                    android:id="@+id/txtProfileBookings"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="37dp"

                    android:background="@drawable/background_profile_info"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="@string/your_bookings"
                    android:textColor="#000000"

                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfileBio" />

                <TextView
                    android:id="@+id/txtProfileAccountInfo"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="37dp"
                    android:layout_marginEnd="37dp"

                    android:background="@drawable/background_profile_info"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="@string/account_info"
                    android:textColor="#000000"

                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfileBookings" />

                <TextView
                    android:id="@+id/txtProfilePersonalInfo"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="37dp"
                    android:layout_marginEnd="37dp"

                    android:background="@drawable/background_profile_info"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="@string/personal_info"
                    android:textColor="#000000"

                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfileAccountInfo" />

                <TextView
                    android:id="@+id/txtProfileTermsConditions"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="37dp"
                    android:layout_marginEnd="37dp"

                    android:background="@drawable/background_profile_info"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="@string/terms_conditions"
                    android:textColor="#000000"

                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfilePersonalInfo" />

                <TextView
                    android:id="@+id/txtProfilePrivacySettings"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="37dp"
                    android:layout_marginEnd="37dp"

                    android:background="@drawable/background_profile_info"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="@string/privacy_policy"
                    android:textColor="#000000"

                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfileTermsConditions" />

                <TextView
                    android:id="@+id/txtProfileAboutUs"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="37dp"
                    android:layout_marginEnd="37dp"

                    android:background="@drawable/background_profile_info"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="@string/about_us"
                    android:textColor="#000000"

                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfilePrivacySettings" />

                <!-- Log Out -->
                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"

                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_custom2"

                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/sign_out"
                    android:textAlignment="center"
                    android:textColor="#218E84"

                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProfileAboutUs" />

            </LinearLayout>
    </ScrollView>

</RelativeLayout>